immich/deployment-server.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: immich-server
spec:
  replicas: 1
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app: immich-server
  template:
    metadata:
      labels:
        app: immich-server
    spec:
      affinity:
        nodeAffinity:
          requiredDuringSchedulingIgnoredDuringExecution:
            nodeSelectorTerms:
            - matchExpressions:
              - key: home.bramble/node-type
                operator: In
                values:
                - "head"
      containers:
      - name: immich-server
        image: ghcr.io/immich-app/immich-server:v2.3.1
        ports:
        - containerPort: 2283
          protocol: TCP
          name: web
        volumeMounts:
        - name: immich-data
          mountPath: /data
        resources:
          requests:
            memory: 2048Mi
          limits:
            memory: 2048Mi
      volumes:
      - name: immich-data
        iscsi:
          targetPortal: 192.168.64.253:3260
          iqn: iqn.2025-03.com.ugreen:immich-data
          lun: 0
          fsType: ext4
          chapAuthDiscovery: false
          chapAuthSession: true
          secretRef:
            name: iscsi-chap-secret
