immich/statefulset-postgres.yaml
---
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: immich-postgres
spec:
  selector:
    matchLabels:
      app: immich-postgres
  serviceName: immich-postgres
  replicas: 1
  template:
    metadata:
      labels:
        app: immich-postgres
    spec:
      containers:
      - name: postgres
        image: ghcr.io/immich-app/postgres:18-vectorchord0.5.3-pgvector0.8.1 # Overridden
        ports:
        - containerPort: 5432
          name: pgport
        volumeMounts:
        - mountPath: /var/lib/postgresql/data
          name: postgres-data
        resources:
          requests:
            memory: 768Mi
          limits:
            memory: 768Mi
  volumeClaimTemplates:
  - apiVersion: v1
    kind: PersistentVolumeClaim
    metadata:
      name: postgres-data
    spec:
      accessModes: ["ReadWriteOnce"]
      storageClassName: local-path
      resources:
        requests:
          storage: 10Gi
