immich/service-immich.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: immich-server
spec:
  clusterIP: None
  selector:
    app: immich-server
  ports:
  - protocol: TCP
    port: 2283
    targetPort: 2283
