immich/service-ml.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: immich-ml
spec:
  type: LoadBalancer
  selector:
    app: immich-ml
  ports:
  - name: immich-ml
    protocol: TCP
    port: 3003
    targetPort: 3003
