immich/service-postgres.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: immich-postgres
spec:
  clusterIP: None
  selector:
    app: immich-postgres
  ports:
  - protocol: TCP
    port: 5432
    targetPort: 5432
