immich/service-valkey.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: immich-valkey
spec:
  clusterIP: None
  selector:
    app: immich-valkey
  ports:
  - protocol: TCP
    port: 6379
    targetPort: 6379
