immich/httproute-local.yaml
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: immich-local
spec:
  parentRefs:
  - group: gateway.networking.k8s.io
    kind: Gateway
    name: immich
  hostnames:
  - immich.home
  rules:
  - matches:
    - path:
        type: PathPrefix
        value: /
    backendRefs:
    - group: ""
      kind: Service
      name: immich-server
      port: 2283
      weight: 1
    filters:
    - type: ExtensionRef
      extensionRef:
        group: traefik.io
        kind: Middleware
        name: local-only
