immich/httproute.yaml
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: immich-public
spec:
  parentRefs:
  - group: gateway.networking.k8s.io
    kind: Gateway
    name: immich
  hostnames:
  - immich.bennaylor.dev
  rules:
  - matches:
    - path:
        type: PathPrefix
        value: /
    backendRefs:
    - group: ""
      kind: Service
      name: immich-server
      port: 2283
      weight: 1
